# calcium

./: .gitignore  CMakeLists.txt  README.md  build-local.sh  build-runtime.sh  errors.h  fragmentShader.spv  lexer.cpp  lexer.h  main.c  main.cpp
examples/: helloworld.ca  main.c  shader.ca  test.ca  test.sdh
include/: SPIRVGenerator.h  ast.h  errors.h  irgenerator.h  lexer.h  parser.h  program.h  writer.h
native/: main.cpp  window.cpp  window.h
runtime/: main.cpp  window.cpp  window.h
src/: SPIRVGenerator.cpp  ast.cpp  irgenerator.cpp  lexer.cpp  main.cpp  parser.cpp  program.cpp  writer.cpp
