cmake_minimum_required(VERSION 3.0.0)
project(Calcium VERSION 0.1.0 LANGUAGES C CXX)
set (CMAKE_CXX_STANDARD 17)

include(CTest)
enable_testing()

file(GLOB SOURCES
    include/*.h
    src/*.cpp
)

add_executable(Calcium ${SOURCES})

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
